@@ -14,5 +14,6 @@
     "qualifiedAttribution": [{
         "agent": {"@id": "http://fdri.ceh.ac.uk/ref/common/manufacturer/vaisala"},
         "hasRole": {"@id": "http://fdri.ceh.ac.uk/ref/common/related-party-role/manufacturer"}
-    }]
+    }],
+    "hasProcedure": [{"@id": "http://fdri.ceh.ac.uk/id/procedure/cosmos-sampling-regime-ta.jsonld"}]
 }
