@@ -15,7 +15,8 @@ DRAFT 0.4.1
 * NEW: Added property `dcat:keyword` as an optional, repeatable propety of `fdri:EnvironmentalMonitoringSystemType`. (#8)
 * NEW: Added properties `fdri:deploymentNote` and `fdri:dependencyNote`. Made `fdri:deploymentVariance` and `fdri:dependencyNote` sub-properties of `fdri:deploymentNote`. The domain of `fdri:deploymentNote` is restricted to `fdri:Deployment`. (#16)
 * NEW: Added property `fdri:canopyHeight` as an optional property of `fdri:Deployment`. (#15)
-* NEW: Added proeprty `fdri:deployedSystemProcedure` as an optional repeatable property of `fdri:Deployment` to capture procedures that apply to the systems deployed by that Deployment. (#10)
+* NEW: Added property `fdri:deployedSystemProcedure` as an optional repeatable property of `fdri:Deployment` to capture procedures that apply to the systems deployed by that Deployment. (#10)
+* CHANGE: Made `hasProcedure` on `EnvironmentalMonitoringSystemType` repeatable in the recordspec schema to match the OWL definition.
 
 DRAFT 0.4
 ---------
